# anki-english-generator

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/: ankiCsv.ts  anki_csv.rs  fileUtils.ts  file_utils.rs  index.ts  main.rs  models.rs  models.ts  utils.rs
src/english-profile/: client.ts  httpUtils.ts  index.ts  models.ts  parser.ts
src/english_profile/: caching.rs  client.rs  mod.rs  models.rs
src/english_profile/parser/: mod.rs  tests.rs  tests_words_list.html
src/english_profile/utils/: mod.rs  tests.rs
