[package]
name = "anki-english-generator"
version = "0.1.0"
description = "The console app to generate the anki cards based on englishprofile word list"
edition = "2021"
license = "MIT"
keywords = ["anki", "englishprofile", "english"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv-async = "1.2"
base_url = "1.1"
futures = "0.3"
log = "0.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"]  }
url = "2.3"

[dev-dependencies]
fluid = "0.4"
